[package]
name = "meshing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*" 
# cxx = "1.0"

# [build-dependencies]
# cxx-build = "1.0"

[lib]
crate-type = ["cdylib"]

# [profile.dev]
# panic="abort"